Bug 912719 - Notify debugger about scripts compiled off thread, report parse errors/warnings for scripts in XUL documents, r=billm.